--- a/TrafficCop/ChangepassViewController.xib
+++ b/TrafficCop/ChangepassViewController.xib
@@ -35,6 +35,11 @@
                                 <action selector="backtopriviouspage:" destination="-1" eventType="touchUpInside" id="XX8-Sb-HRk"/>
                             </connections>
                         </button>
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="traffic_logo.png" translatesAutoresizingMaskIntoConstraints="NO" id="Lcw-YP-XXc">
+                            <rect key="frame" x="107" y="16" width="105" height="26"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                        </imageView>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                 </view>
@@ -46,5 +51,6 @@
     </objects>
     <resources>
         <image name="arrow-left.png" width="48" height="48"/>
+        <image name="traffic_logo.png" width="450" height="94"/>
     </resources>
 </document>
