--- a/TrafficCop/LoginViewController.xib
+++ b/TrafficCop/LoginViewController.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="4510" systemVersion="12F45" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
         <deployment defaultVersion="1552" identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
@@ -8,6 +8,8 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController">
             <connections>
                 <outlet property="Errview" destination="sDI-Qp-0F3" id="JlM-Un-iAG"/>
+                <outlet property="facebookLabel" destination="zjn-Os-hle" id="stU-0k-jhv"/>
+                <outlet property="twitterLabel" destination="opW-Ym-Gd0" id="732-Y3-D0p"/>
                 <outlet property="view" destination="Fwf-DB-MXA" id="gK6-jj-8Ak"/>
             </connections>
         </placeholder>
